--- a/blog.html
+++ b/blog.html
@@ -147,19 +147,22 @@
                     </div>
                     <div data-w-id="e8c6dd01-1869-61b7-1bdf-c9bcf7808b95" style="opacity:0" class="blog-block">
                         <div class="w-layout-grid _4-grid">
-                            <div id="w-node-e8c6dd01-1869-61b7-1bdf-c9bcf7808b97-dc178eda" class="card">
+                            <a href="/blogs/daily-hair-care-tips-to-reduce-hair-fall"
+                                id="w-node-e8c6dd01-1869-61b7-1bdf-c9bcf7808b97-dc178eda" class="card card-link">
                                 <div class="card-image-block margin-bottom-30px">
-                                    <div class="image-container"><img src="/assets/placeholder-02.webp" loading="lazy"
-                                            alt="" class="image" /></div>
+                                    <div class="image-container"><img src="/assets/blog/hairfall-bangalore.webp"
+                                            loading="lazy" alt="Daily hair care tips to reduce hair fall"
+                                            class="image" /></div>
                                 </div>
                                 <div class="card-content-block">
                                     <div class="tags margin-bottom-30px">Haircare</div>
-                                    <div class="card-title margin-bottom-30px">Monsoon Hair Care in Bangalore:
-                                        Frizz-Free and Fabulous
+                                    <div class="card-title margin-bottom-30px">Daily Hair Care Habits That Actually
+                                        Reduce Hair Fall
+                                        in Bangalore Weather
                                     </div>
-                                    <p class="paragraph small-paragraph">24 july 2025</p>
+                                    <p class="paragraph small-paragraph">12 Jan 2026</p>
                                 </div>
-                            </div>
+                            </a>
                             <div id="w-node-b51b1697-95a3-46f7-1aa8-dbeb9ae6f53f-dc178eda" class="card">
                                 <div class="card-image-block margin-bottom-30px">
                                     <div class="image-container"><img src="/assets/placeholder-02.webp" loading="lazy"
@@ -188,7 +191,8 @@
                                 id="w-node-c40cec85-71e9-afd0-c87b-6c9ee65807fe-dc178eda" class="card card-link">
                                 <div class="card-image-block margin-bottom-30px">
                                     <div class="image-container"><img src="/assets/blog/keartin-vs-botox-hair.webp"
-                                            loading="lazy" alt="" class="image" /></div>
+                                            loading="lazy" alt="Keratin and botox treatments at sugarcoat salon"
+                                            class="image" /></div>
                                 </div>
                                 <div class="card-content-block">
                                     <div class="tags margin-bottom-30px">Haircare</div>
