--- a/blogs/daily-hair-care-tips-to-reduce-hair-fall.html
+++ b/blogs/daily-hair-care-tips-to-reduce-hair-fall.html
@@ -3,19 +3,19 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Keratin vs Hair Botox: Which Treatment Is Right? | Sugarcoat Salon
+    <title>Daily Hair Care Tips to Reduce Hair Fall | Sugarcoat Salon
     </title>
-    <link rel="canonical" href="https://www.sugarcoatsalon.in/blogs/keratin-vs-hair-botox">
-    <meta content="Confused between keratin and hair botox? Learn the key differences, benefits, and which hair treatment suits your hair type best at Sugarcoat Salon.
+    <link rel="canonical" href="https://www.sugarcoatsalon.in/blogs/daily-hair-care-tips-to-reduce-hair-fall">
+    <meta content="Simple daily hair care habits to reduce hair fall in Bangalore weather. Expert tips from Sugarcoat Salon.
 " name="description" />
-    <meta content="Keratin vs Hair Botox: Which Treatment Is Right? | Sugarcoat Salon
+    <meta content="Daily Hair Care Tips to Reduce Hair Fall | Sugarcoat Salon
 " property="og:title" />
-    <meta content="Confused between keratin and hair botox? Learn the key differences, benefits, and which hair treatment suits your hair type best at Sugarcoat Salon.
+    <meta content="Simple daily hair care habits to reduce hair fall in Bangalore weather. Expert tips from Sugarcoat Salon.
 " name="description
 " property="og:description" />
-    <meta content="Keratin vs Hair Botox: Which Treatment Is Right? | Sugarcoat Salon
+    <meta content="Daily Hair Care Tips to Reduce Hair Fall | Sugarcoat Salon
 " property="twitter:title" />
-    <meta content="Confused between keratin and hair botox? Learn the key differences, benefits, and which hair treatment suits your hair type best at Sugarcoat Salon.
+    <meta content="Simple daily hair care habits to reduce hair fall in Bangalore weather. Expert tips from Sugarcoat Salon.
 " name="description
 " property="twitter:description" />
     <meta property="og:type" content="website" />
@@ -69,10 +69,10 @@
     },
     {
       "@type": "BlogPosting",
-      "@id": "https://www.sugarcoatsalon.in/blog/keratin-vs-botox.html#blogposting",
-      "headline": "Keratin vs Botox Hair Treatment",
-      "description": "Detailed comparison of keratin and botox hair treatments, benefits, differences, and expert advice from Sugarcoat Salon.",
-      "image": "https://www.sugarcoatsalon.in/assets/blog/keratin-vs-botox-hair.webp",
+      "@id": "https://www.sugarcoatsalon.in/blog/daily-hair-care-tips-to-reduce-hair-fall.html#blogposting",
+      "headline": "Daily Hair Care Tips to Reduce Hair Fall",
+      "description": "Simple daily hair care habits to reduce hair fall in Bangalore weather. Expert tips from Sugarcoat Salon.",
+      "image": "https://www.sugarcoatsalon.in/assets/blog/daily-hair-care-tips-to-reduce-hair-fall-hair.webp",
       "author": {
         "@type": "Organization",
         "@id": "https://www.sugarcoatsalon.in/#organization"
@@ -81,16 +81,16 @@
         "@type": "Organization",
         "@id": "https://www.sugarcoatsalon.in/#organization"
       },
-      "datePublished": "2026-01-10",
-      "dateModified": "2026-01-10",
+      "datePublished": "2026-01-12",
+      "dateModified": "2026-01-12",
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://www.sugarcoatsalon.in/blog/keratin-vs-botox.html"
+        "@id": "https://www.sugarcoatsalon.in/blog/daily-hair-care-tips-to-reduce-hair-fall.html"
       }
     },
     {
       "@type": "BreadcrumbList",
-      "@id": "https://www.sugarcoatsalon.in/blog/keratin-vs-botox.html#breadcrumb",
+      "@id": "https://www.sugarcoatsalon.in/blog/daily-hair-care-tips-to-reduce-hair-fall#breadcrumb",
       "itemListElement": [
         {
           "@type": "ListItem",
@@ -107,7 +107,7 @@
         {
           "@type": "ListItem",
           "position": 3,
-          "name": "Keratin vs Botox Hair Treatment"
+          "name": "Daily Hair Care Tips to Reduce Hair Fall"
         }
       ]
     }
@@ -152,59 +152,67 @@
                             <ol>
                                 <li><a href="https://www.sugarcoatsalon.in/">Home</a></li>
                                 <li><a href="/blog">Blog</a></li>
-                                <li aria-current="page">Keratin vs Botox Hair Treatment</li>
+                                <li aria-current="page">Daily Hair Care Tips to Reduce Hair Fall</li>
                             </ol>
                         </nav>
-                        <h1 class="heading h3 margin-bottom-40px">Keratin vs Hair Botox: Which Treatment Is Right for
-                            Your Hair Type?</h1>
+                        <h1 class="heading h3 margin-bottom-40px">Daily Hair Care Habits That Actually Reduce Hair Fall
+                            in Bangalore Weather</h1>
                         <div class="paragraph small-paragraph subtitle dark-title-grey margin-top-20px">Written by</div>
                         <p class="dark-title paragraph margin-bottom-10px">
                             Mahina Sehrish <br> <span class="paragraph small-paragraph">Sugarcoat Salon,
                                 Bangalore</span>
                         </p>
                         <p class="paragraph small-paragraph margin-bottom-4opx">
-                            Date: 10 Jan 2026</p>
+                            Date: 12 Jan 2026</p>
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="grid-images-div">
                                 <div class="image-container"><img class="image"
-                                        src="/assets/blog/keratin-treatment-sugarcoat-salon.webp"
-                                        alt="Keratin Treatment at Sugarcoat Salon" style="opacity:0"
+                                        src="/assets/blog/hairfall-concerns.webp"
+                                        alt="Woman comparing hair breakage and hair fall concerns" style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
                                 </div>
                             </div>
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4 margin-bottom-20px">Keratin and Hair Botox: What You Should Know
-                                    Before Choosing</h2>
+                                <h2 class="heading h4 margin-bottom-20px">Why Hair Fall Is So Common in Bangalore</h2>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    If you are dealing with frizz, dryness, or unmanageable hair, you have probably
-                                    heard about Keratin and Hair Botox treatments. While both aim to improve hair
-                                    quality, they serve very different purposes. Choosing the right one depends on your
-                                    hair condition, not trends.
+                                    Hair fall is one of the most common concerns we hear at salons, especially in cities
+                                    like Bangalore where weather, water quality, and lifestyle all play a role. While
+                                    some hair fall is normal, the right daily habits can significantly reduce excessive
+                                    shedding and breakage.
                                 </p>
-                                <h2 class="heading h4 margin-bottom-20px">What Is a Keratin Treatment?</h2>
+                                <h2 class="heading h4 margin-bottom-20px">Cleanse Your Scalp the Right Way</h2>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Keratin treatment is primarily a smoothing and straightening service. It works by
-                                    infusing keratin protein into the hair cuticle and sealing it with heat.
+                                    A clean scalp is the foundation of healthy hair growth.
                                 </p>
-                                <h3 class="heading h5">Best for:</h3>
+                                <h3 class="heading h5">Best practices:</h3>
                                 <ul class="paragraph small-paragraph">
-                                    <li>Extremely frizzy or curly hair</li>
-                                    <li>Unmanageable, coarse textures</li>
-                                    <li>Hair that needs long-lasting smoothness</li>
+                                    <li>Wash your hair 2–3 times a week</li>
+                                    <li>Use a mild, sulfate-free shampoo</li>
+                                    <li>Always dilute shampoo before applying</li>
                                 </ul>
-                                <h3 class="heading h5">Results you can expect:</h3>
+                                <h2 class="heading h4 margin-bottom-20px">Oil Smart, Not Heavy</h2>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Oiling helps, but only when done correctly.
+                                </p>
+                                <h3 class="heading h5">What works:</h3>
                                 <ul class="paragraph small-paragraph">
-                                    <li>Reduced frizz and volume</li>
-                                    <li>Sleeker, straighter appearance</li>
-                                    <li>Easier daily styling</li>
+                                    <li>Light oiling once or twice a week</li>
+                                    <li>Gentle massage for 5–10 minutes</li>
+                                    <li>Wash off within a few hours</li>
                                 </ul>
-                                <h3 class="heading h5">Things to know:</h3>
-                                <ul class="paragraph small-paragraph">
-                                    <li>Results last around 5-6 months</li>
-                                    <li>Not ideal for very thin or heavily damaged hair</li>
-                                    <li>Requires proper sulfate-free aftercare</li>
+                                <h2 class="heading h4 margin-bottom-20px">Don’t Skip Conditioner</h2>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Skipping conditioner is a common mistake. Conditioner or a good hair mask can be
+                                    used after shampooing. Apply on mid-lengths and ends.
+                                </p>
+                                <h3 class="heading h5">Conditioner helps to:</h3>
+                                <ul class="paragraph small-paragraph margin-bottom-20px">
+                                    <li>Reduce breakage</li>
+                                    <li>Improve manageability</li>
+                                    <li>Protect hair length</li>
                                 </ul>
+
                             </div>
                         </div>
                     </div>
@@ -221,35 +229,42 @@
                                     quality, they serve very different purposes. Choosing the right one depends on your
                                     hair condition, not trends.
                                 </p> -->
-                                <h2 class="heading h4 margin-bottom-20px">What Is Hair Botox?</h2>
+                                <h2 class="heading h4 margin-bottom-20px">Reduce Heat and Tight Hairstyles</h2>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Despite the name, Hair Botox contains no injections or chemicals. It is a deep
-                                    conditioning and repair treatment designed to restore hair health.
+                                    Frequent heat styling and tight hairstyles stress the hair roots.
                                 </p>
-                                <h3 class="heading h5">Best for:</h3>
+                                <h3 class="heading h5">To minimise damage:</h3>
                                 <ul class="paragraph small-paragraph">
-                                    <li>Dry, damaged, or chemically treated hair</li>
-                                    <li>Dull, lifeless strands</li>
-                                    <li>Hair breakage and split ends</li>
+                                    <li>Limit straighteners and blow dryers</li>
+                                    <li>Avoid tight buns daily</li>
+                                    <li>Use heat protectant before styling</li>
                                 </ul>
-                                <h3 class="heading h5">Results you can expect:</h3>
+                                <h2 class="heading h4 margin-bottom-20px">Eat Well and Stay Hydrated</h2>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Hair health starts from within.
+                                </p>
+                                <h3 class="heading h5">Include:</h3>
                                 <ul class="paragraph small-paragraph">
-                                    <li>Improved softness and shine</li>
-                                    <li>Healthier-looking hair texture</li>
-                                    <li>Better moisture retention</li>
+                                    <li>Protein-rich foods</li>
+                                    <li>Iron and omega-3 sources</li>
+                                    <li>Adequate daily water intake</li>
                                 </ul>
-                                <h3 class="heading h5">Things to know:</h3>
-                                <ul class="paragraph small-paragraph">
-                                    <li>Does not straighten hair</li>
-                                    <li>Results usually last 5-6 months</li>
-                                    <li>Requires proper sulfate-free aftercare</li>
-                                    <li>Can be repeated safely</li>
-                                </ul>
+                                <h2 class="heading h4 margin-bottom-20px">When to Seek Professional Help</h2>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    If hair fall continues despite good care, professional analysis can help identify
+                                    scalp or damage-related issues. At Sugarcoat salon, we have treatments to repair
+                                    damaged hair and to keep the scalp healthy and clean.
+                                </p>
+                                <h2 class="heading h4 margin-bottom-20px">Final Thoughts</h2>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Consistent daily care combined with professional guidance is the most effective way
+                                    to control hair fall in the long run.
+                                </p>
                             </div>
                             <div class="grid-images-div">
-                                <div class="image-container"><img class="image"
-                                        src="/assets/blog/botox-treatment-sugarcoat-salon.webp"
-                                        alt="Botox Treatment at Sugarcoat Salon" style="opacity:0"
+                                <div class="image-container"><img class="image" src="/assets/blog/hair-scalp-care.webp"
+                                        alt="Healthy hair care routine with shampoo and hair oil application"
+                                        style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
                                 </div>
@@ -257,30 +272,10 @@
                         </div>
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4 margin-bottom-20px">Keratin vs Hair Botox: Quick Comparison</h2>
-                                <ul class="paragraph small-paragraph">
-                                    <li>Straightening: Keratin ✔ | Botox ✖</li>
-                                    <li>Repair & hydration: Botox ✔ | Keratin moderate</li>
-                                    <li>Frizz control: Keratin strong | Botox mild</li>
-                                    <li>Chemical strength: Keratin higher | Botox gentle</li>
-                                </ul>
-                                <h2 class="heading h4 margin-bottom-20px">Which One Should You Choose?</h2>
-                                <ul class="paragraph small-paragraph">
-                                    <li>Choose Keratin if your main goal is smooth, frizz-free, manageable hair.</li>
-                                    <li>Choose Hair Botox if your hair feels damaged, dry, or weak and needs recovery.
-                                    </li>
-                                    <li>In some cases, stylists recommend Botox first to repair hair, followed by
-                                        Keratin later.</li>
-                                </ul>
-                                <h2 class="heading h4 margin-bottom-20px">Final Advice</h2>
-                                <p class="paragraph small-paragraph margin-bottom-40px">
-                                    There is no one-size-fits-all solution. A professional hair analysis is essential
-                                    before choosing any treatment. At Sugarcoat, we assess your hair texture, damage
-                                    level, and lifestyle before recommending what truly works for you.
-                                </p>
+
                                 <div class="align-button-center">
-                                    <div class="heading h4 margin-bottom-20px">Looking for
-                                        keratin or botox treatments?
+                                    <div class="heading h4 margin-bottom-20px">Facing severe hairfall and scalp related
+                                        issues? <br>Get a consultation with our professionals.
                                     </div><a href="/contact" class="button text-black w-button">Book
                                         Appointment</a>
                                 </div>
