blog image optimizations css

--- a/blogs/daily-hair-care-tips-to-reduce-hair-fall.html
+++ b/blogs/daily-hair-care-tips-to-reduce-hair-fall.html
@@ -165,8 +165,8 @@
                         <p class="paragraph small-paragraph margin-bottom-4opx">
                             Date: 12 Jan 2026</p>
                         <div class="w-layout-grid _2-grids center-grid">
-                            <div class="grid-images-div">
-                                <div class="image-container"><img class="image"
+                            <div class="blog-content grid-images-div">
+                                <div class="image-container"><img class="image portrait"
                                         src="/assets/blog/hairfall-concerns.webp"
                                         alt="Woman comparing hair breakage and hair fall concerns" style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
@@ -261,8 +261,9 @@
                                     to control hair fall in the long run.
                                 </p>
                             </div>
-                            <div class="grid-images-div">
-                                <div class="image-container"><img class="image" src="/assets/blog/hair-scalp-care.webp"
+                            <div class="blog-content grid-images-div">
+                                <div class="image-container"><img class="image portrait"
+                                        src="/assets/blog/hair-scalp-care.webp"
                                         alt="Healthy hair care routine with shampoo and hair oil application"
                                         style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
