--- a/blogs/keratin-vs-hair-botox.html
+++ b/blogs/keratin-vs-hair-botox.html
@@ -165,8 +165,8 @@
                         <p class="paragraph small-paragraph margin-bottom-4opx">
                             Date: 10 Jan 2026</p>
                         <div class="w-layout-grid _2-grids center-grid">
-                            <div class="grid-images-div">
-                                <div class="image-container"><img class="image"
+                            <div class="blog-content grid-images-div">
+                                <div class="image-container"><img class="image portrait"
                                         src="/assets/blog/keratin-treatment-sugarcoat-salon.webp"
                                         alt="Keratin Treatment at Sugarcoat Salon" style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
@@ -246,8 +246,8 @@
                                     <li>Can be repeated safely</li>
                                 </ul>
                             </div>
-                            <div class="grid-images-div">
-                                <div class="image-container"><img class="image"
+                            <div class="blog-content grid-images-div">
+                                <div class="image-container"><img class="image portrait"
                                         src="/assets/blog/botox-treatment-sugarcoat-salon.webp"
                                         alt="Botox Treatment at Sugarcoat Salon" style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
