bing search console verification code

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
   <!-- After you add your site in Search Console, Google gives a code-->
   <meta name="google-site-verification" content="LM9kGB_uIxpK8N3KkYqhk5jk9Giu9pFpjnC2SSC6HbA" />
+  <!-- Bing Webmaster code -->
+  <meta name="msvalidate.01" content="8D6924285B183C1B9C4D26459F88486A" />
   <meta content="summary_large_image" name="twitter:card" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <meta name="format-detection" content="telephone=no, email=no, address=no">
