minor broken links change

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
       data-w-id="af0bdc02-deba-dae5-a938-2ea7d3e93d0d" role="banner" data-duration="400" data-doc-height="1">
       <div class="container">
         <div class="navbar-wrapper">
-          <div class="navbar-side"><a href="index.html" class="navbar-brand w-nav-brand"><img
-                src="/assets/sc-logo-03.svg" loading="lazy" width="290" sizes="(max-width: 479px) 96vw, 290px"
+          <div class="navbar-side"><a href="/" class="navbar-brand w-nav-brand"><img src="/assets/sc-logo-03.svg"
+                loading="lazy" width="290" sizes="(max-width: 479px) 96vw, 290px"
                 alt="Sugarcoat Salon brand logo" /></a>
             <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
               <ul role="list" class="nav-menu w-list-unstyled">
@@ -683,7 +683,7 @@
                 <div data-w-id="7b6e409d-6ca1-994c-342a-f7379fb24240" style="opacity:0"
                   class="title-block margin-bottom-40px">
                   <h2 class="heading h3">Book Your Appointment Today</h2>
-                </div><a data-w-id="88b33b3b-4b99-8288-c284-dfd0b32a9d79" style="opacity:0" href="contact-us.html"
+                </div><a data-w-id="88b33b3b-4b99-8288-c284-dfd0b32a9d79" style="opacity:0" href="/contact"
                   class="button cta-button w-button">Book Appointment</a>
               </div>
             </div>
