--- a/services.html
+++ b/services.html
@@ -92,7 +92,7 @@
             data-w-id="af0bdc02-deba-dae5-a938-2ea7d3e93d0d" role="banner" data-duration="400" data-doc-height="1">
             <div class="container">
                 <div class="navbar-wrapper">
-                    <div class="navbar-side"><a href="index.html" class="navbar-brand w-nav-brand"><img
+                    <div class="navbar-side"><a href="/" class="navbar-brand w-nav-brand"><img
                                 src="/assets/sc-logo-03.svg" loading="lazy" width="187"
                                 sizes="(max-width: 479px) 80vw, 187px" alt="Sugarcoat Salon brand logo" /></a>
                         <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
