minor link changes in pages and llms

--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
                                     <h1 class="subtitle margin-bottom-40px">Contact Sugarcoat Salon, Bangalore</h1>
                                     <p class="heading h3 text-white margin-bottom-40px">Book appointments, enquire about
                                         services, or visit us at our salon in Hennur.
-                                    </p><a href="contact-us.html" class="button text-white w-button">Book
+                                    </p><a href="/contact" class="button text-white w-button">Book
                                         Appointment</a>
                                 </div>
                             </div>
